[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"

[build-dependencies]
loc = { git = "https://github.com/dtomvan/loc" }

[dev-dependencies]
criterion = "0.3.5"
