[package]
name = "aoc_common"
version = "0.1.0"
edition = "2021"
build = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
num-bigint = "0.4.3"
num-traits = "0.2.15"
thiserror = "1.0.37"
derive_more = "0.99.0"
paste = "1.0.9"

itertools = { workspace = true }
