[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dtomvan/aoc"
homepage = "https://adventofcode.com/2021"
keywords = ["advent-of-code"]
build = "../../util/common/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
itertools = "0.10.1"
aoc_common = { path = "../../util/common" }

[build-dependencies]
loc = { default-features = false, git = "https://github.com/dtomvan/loc" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "all_days"
harness = false
