[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dtomvan/aoc"
homepage = "https://adventofcode.com/2021"
keywords = ["advent-of-code"]
build = "../../util/common/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
aoc_common = { path = "../../util/common" }

[build-dependencies]
loc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "2021"
harness = false
