[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"
build = "../../util/common/build.rs"
homepage = "https://adventofcode.com/2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
aoc_common = { workspace = true }

[build-dependencies]
loc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
