[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
build = "../../util/common/build.rs"
homepage = "https://adventofcode.com/2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
aoc_common = { path = "../../util/common" }
arboard = "3.3"

[build-dependencies]
loc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

# [[bench]]
# name = "2023"
# harness = false
